; ModuleID = '/home/carl/AnghaBench/tmux/extr_colour.c_colour_join_rgb.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_colour.c_colour_join_rgb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COLOUR_FLAG_RGB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @colour_join_rgb(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = and i32 %7, 255
  %9 = shl i32 %8, 16
  %10 = load i32, i32* %5, align 4
  %11 = and i32 %10, 255
  %12 = shl i32 %11, 8
  %13 = or i32 %9, %12
  %14 = load i32, i32* %6, align 4
  %15 = and i32 %14, 255
  %16 = or i32 %13, %15
  %17 = load i32, i32* @COLOUR_FLAG_RGB, align 4
  %18 = or i32 %16, %17
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
